--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <nav>
         <a class="logo" href="./index.html"> <span>Web</span>Studio</a>
         <ul class="site-nav">
-          <li><a class="link" href="./index.html">Студия</a></li>
+          <li><a class="link active" href="./index.html">Студия</a></li>
           <li><a class="link" href="">Портфолио</a></li>
           <li><a class="link" href="">Контакты</a></li>
         </ul>
@@ -37,7 +37,7 @@
           Эффективные решения <br />
           для вашего бизнеса
         </h1>
-        <a href="">Заказать услугу</a>
+        <a class="buttom" href="">Заказать услугу</a>
       </section>
       <!-- FEATURES SECTION-->
       <section class="features">
