--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <a class="logo" href="./index.html"> <span>Web</span>Studio</a>
         <ul class="site-nav">
           <li><a class="link active" href="./index.html">Студия</a></li>
-          <li><a class="link" href="">Портфолио</a></li>
+          <li><a class="link" href="./portfolio.html">Портфолио</a></li>
           <li><a class="link" href="">Контакты</a></li>
         </ul>
       </nav>
@@ -139,10 +139,14 @@
     <footer class="footer">
       <a class="logo" href="./index.html"><span>Web</span>Studio</a>
       <address class="address">
-        <span> г. Киев, пр-т Леси Украинки, 26</spa>
+        <span> г. Киев, пр-т Леси Украинки, 26</span>
         <ul>
-          <li><a class="link" href="mailto:info@example.com">info@example.com</a></li>
-          <li><a class="link" href="tel:+380991111111">+38 099 111 11 11</a></li>
+          <li>
+            <a class="link" href="mailto:info@example.com">info@example.com</a>
+          </li>
+          <li>
+            <a class="link" href="tel:+380991111111">+38 099 111 11 11</a>
+          </li>
         </ul>
       </address>
     </footer>
