--- a/portfolio.html
+++ b/portfolio.html
@@ -41,7 +41,7 @@
           <li><button type="button">Маркетинг</button></li>
         </ul>
         <ul>
-          <li>
+          <li class="exampl-el">
             <img
               src="./img/portfolio/tehnocrack.jpg"
               alt="ноутбук"
@@ -50,7 +50,7 @@
             <h2>Технокряк</h2>
             <p>Веб-сайт</p>
           </li>
-          <li>
+          <li class="exampl-el">
             <img
               src="./img/portfolio/poster.jpg"
               alt="постер с баскетболистами"
@@ -59,22 +59,22 @@
             <h2>Постер New Orlean vs Golden Star</h2>
             <p>Дизайн</p>
           </li>
-          <li>
+          <li class="exampl-el">
             <img src="./img/portfolio/seafood.jpg" alt="рыба" width="370" />
             <h2>Ресторан Seafood</h2>
             <p>Приложение</p>
           </li>
-          <li>
+          <li class="exampl-el">
             <img src="./img/portfolio/prime.jpg" alt="Наушники" width="370" />
             <h2>Проект Prime</h2>
             <p>Маркетинг</p>
           </li>
-          <li>
+          <li class="exampl-el">
             <img src="./img/portfolio/boxes.jpg" alt="коробки" width="370" />
             <h2>Проект Boxes</h2>
             <p>Приложение</p>
           </li>
-          <li>
+          <li class="exampl-el">
             <img
               src="./img/portfolio/inspiration.jpg"
               alt="монитор"
@@ -83,7 +83,7 @@
             <h2>Inspiration has no Borders</h2>
             <p>Веб-сайт</p>
           </li>
-          <li>
+          <li class="exampl-el">
             <img
               src="./img/portfolio/limited-edition.jpg"
               alt="книга"
@@ -92,12 +92,12 @@
             <h2>Издание Limited Edition</h2>
             <p>Дизайн</p>
           </li>
-          <li>
+          <li class="exampl-el">
             <img src="./img/portfolio/lab.jpg" alt="бирка" width="370" />
             <h2>Проект LAB</h2>
             <p>Маркетинг</p>
           </li>
-          <li>
+          <li class="exampl-el">
             <img
               src="./img/portfolio/growning.jpg"
               alt="работа за ноутбком"
