добавляет цвет списку примеров

--- a/portfolio.html
+++ b/portfolio.html
@@ -40,7 +40,7 @@
           <li><button type="button">Дизайн</button></li>
           <li><button type="button">Маркетинг</button></li>
         </ul>
-        <ul>
+        <ul class="examples">
           <li class="exampl-el">
             <img
               src="./img/portfolio/tehnocrack.jpg"
