--- a/index.html
+++ b/index.html
@@ -48,28 +48,29 @@
       <section class="features">
         <h2>Особенности</h2>
         <ul>
-          <li>
+          <li class="features-elements">
             <h3>Внимание к деталям</h3>
             <p class="features-text">
               Идейные соображения, а также начало повседневной работы по
               формированию позиции.
             </p>
           </li>
-          <li>
+          <li class="features-elements">
+            class="features-elements"
             <h3>Пунктуальность</h3>
             <p class="features-text">
               Задача организации, в особенности же рамки и место обучения кадров
               влечет за собой.
             </p>
           </li>
-          <li>
+          <li class="features-elements">
             <h3>Планирование</h3>
             <p class="features-text">
               Равным образом консультация с широким активом в значительной
               степени обуславливает.
             </p>
           </li>
-          <li>
+          <li class="features-elements">
             <h3>Современные технологии</h3>
             <p class="features-text">
               Значимость этих проблем настолько очевидна, что реализация
