убирает точки в li

--- a/portfolio.html
+++ b/portfolio.html
@@ -16,16 +16,16 @@
     <!--HEADER-->
 
     <header>
-      <nav>
-        <a class="logo" href="./index.html"> <span>Web</span>Studio</a>
-        <ul class="site-nav">
-          <li><a class="link" href="./index.html">Студия</a></li>
-          <li><a class="link active" href="./portfolio.html">Портфолио</a></li>
+      <nav class="site-nav">
+        <a class="logo link" href="./index.html"> <span>Web</span>Studio</a>
+        <ul class="list">
+          <li><a class="link active" href="./index.html">Студия</a></li>
+          <li><a class="link" href="./portfolio.html">Портфолио</a></li>
           <li><a class="link" href="">Контакты</a></li>
         </ul>
       </nav>
 
-      <ul class="contacts">
+      <ul class="contacts list">
         <li>
           <a class="link" href="mailto:info@devstudio.com"
             >info@devstudio.com</a
@@ -38,14 +38,14 @@
     <main>
       <section>
         <h1>examples</h1>
-        <ul>
+        <ul class="list">
           <li><button type="button">Все</button></li>
           <li><button type="button">Веб-сайты</button></li>
           <li><button type="button">Приложения</button></li>
           <li><button type="button">Дизайн</button></li>
           <li><button type="button">Маркетинг</button></li>
         </ul>
-        <ul class="examples">
+        <ul class="examples list">
           <li class="exampl-el">
             <img
               src="./img/portfolio/tehnocrack.jpg"
@@ -116,10 +116,10 @@
     </main>
     <!-- FOOTER-->
     <footer class="footer">
-      <a class="logo" href="./index.html"><span>Web</span>Studio</a>
+      <a class="logo link" href="./index.html"><span>Web</span>Studio</a>
       <address class="address">
         <span> г. Киев, пр-т Леси Украинки, 26</span>
-        <ul>
+        <ul class="list">
           <li>
             <a class="link" href="mailto:info@example.com">info@example.com</a>
           </li>
