--- a/index.html
+++ b/index.html
@@ -17,15 +17,15 @@
 
     <header>
       <nav class="site-nav">
-        <a class="logo" href="./index.html"> <span>Web</span>Studio</a>
-        <ul>
+        <a class="logo link" href="./index.html"> <span>Web</span>Studio</a>
+        <ul class="list">
           <li><a class="link active" href="./index.html">Студия</a></li>
           <li><a class="link" href="./portfolio.html">Портфолио</a></li>
           <li><a class="link" href="">Контакты</a></li>
         </ul>
       </nav>
 
-      <ul class="contacts">
+      <ul class="contacts list">
         <li>
           <a class="link" href="mailto:info@devstudio.com"
             >info@devstudio.com</a
@@ -42,12 +42,12 @@
           Эффективные решения <br />
           для вашего бизнеса
         </h1>
-        <a class="buttom" href="">Заказать услугу</a>
+        <a class="buttom link" href="">Заказать услугу</a>
       </section>
       <!-- FEATURES SECTION-->
       <section class="features">
         <h2>Особенности</h2>
-        <ul>
+        <ul class="list">
           <li class="features-elements">
             <h3>Внимание к деталям</h3>
             <p class="features-text">
@@ -81,7 +81,7 @@
       <!-- What we do SECTION-->
       <section>
         <h2>Чем мы занимаемся</h2>
-        <ul>
+        <ul class="list">
           <li>
             <img
               src="./img/what-we-do/what-we-do-1.jpg"
@@ -108,7 +108,7 @@
       <!-- Our team SECTION-->
       <section class="team">
         <h2>Наша команда</h2>
-        <ul>
+        <ul class="list">
           <li>
             <img src="./img/our-team/Ihor.jpg" alt="Фото Игоря" width="270" />
             <h3>Игорь Демьяненко</h3>
@@ -142,10 +142,10 @@
     </main>
     <!-- FOOTER-->
     <footer class="footer">
-      <a class="logo" href="./index.html"><span>Web</span>Studio</a>
+      <a class="logo link" href="./index.html"><span>Web</span>Studio</a>
       <address class="address">
         <span> г. Киев, пр-т Леси Украинки, 26</span>
-        <ul>
+        <ul class="list">
           <li>
             <a class="link" href="mailto:info@example.com">info@example.com</a>
           </li>
