--- a/portfolio.html
+++ b/portfolio.html
@@ -19,8 +19,8 @@
       <nav class="site-nav">
         <a class="logo link" href="./index.html"> <span>Web</span>Studio</a>
         <ul class="list">
-          <li><a class="link active" href="./index.html">Студия</a></li>
-          <li><a class="link" href="./portfolio.html">Портфолио</a></li>
+          <li><a class="link " href="./index.html">Студия</a></li>
+          <li><a class="link active" href="./portfolio.html">Портфолио</a></li>
           <li><a class="link" href="">Контакты</a></li>
         </ul>
       </nav>
