--- a/portfolio.html
+++ b/portfolio.html
@@ -3,11 +3,16 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Портфолио</title>
+    <title>Студия</title>
     <link rel="preconnect" href="https://fonts.gstatic.com" />
+
     <link
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/modern-normalize@1.0.0/modern-normalize.css"
     />
     <link rel="stylesheet" href="./css/common.css" />
     <link rel="stylesheet" href="./css/portfolio.css" />
@@ -15,35 +20,41 @@
   <body>
     <!--HEADER-->
 
-    <header>
-      <nav class="site-nav">
-        <a class="logo link" href="./index.html"> <span>Web</span>Studio</a>
+    <header class="header">
+      <nav class="nav">
+        <a class="head-logo" href="./index.html"> <span>Web</span>Studio</a>
         <ul class="list">
-          <li><a class="link " href="./index.html">Студия</a></li>
-          <li><a class="link active" href="./portfolio.html">Портфолио</a></li>
-          <li><a class="link" href="">Контакты</a></li>
+          <li><a class="nav-link" href="./index.html">Студия</a></li>
+          <li>
+            <a class="nav-link active" href="./portfolio.html">Портфолио</a>
+          </li>
+          <li><a class="nav-link" href="">Контакты</a></li>
         </ul>
       </nav>
 
       <ul class="contacts list">
         <li>
-          <a class="link" href="mailto:info@devstudio.com"
+          <a class="contacts-link" href="mailto:info@devstudio.com"
             >info@devstudio.com</a
           >
         </li>
-        <li><a class="link" href="tel:+380961111111">+38 096 111 11 11</a></li>
+        <li>
+          <a class="contacts-link" href="tel:+380961111111"
+            >+38 096 111 11 11</a
+          >
+        </li>
       </ul>
     </header>
     <!-- MAIN-->
     <main>
       <section>
-        <h1>examples</h1>
+        <h1 class="visually-hidden">examples</h1>
         <ul class="list">
-          <li><button type="button">Все</button></li>
-          <li><button type="button">Веб-сайты</button></li>
-          <li><button type="button">Приложения</button></li>
-          <li><button type="button">Дизайн</button></li>
-          <li><button type="button">Маркетинг</button></li>
+          <li><button class="buttons" type="button">Все</button></li>
+          <li><button class="buttons" type="button">Веб-сайты</button></li>
+          <li><button class="buttons" type="button">Приложения</button></li>
+          <li><button class="buttons" type="button">Дизайн</button></li>
+          <li><button class="buttons" type="button">Маркетинг</button></li>
         </ul>
         <ul class="examples list">
           <li class="exampl-el">
@@ -52,8 +63,8 @@
               alt="ноутбук"
               width="370"
             />
-            <h2>Технокряк</h2>
-            <p>Веб-сайт</p>
+            <h2 class="examples-title">Технокряк</h2>
+            <p class="examples-text">Веб-сайт</p>
           </li>
           <li class="exampl-el">
             <img
@@ -61,23 +72,23 @@
               alt="постер с баскетболистами"
               width="370"
             />
-            <h2>Постер New Orlean vs Golden Star</h2>
-            <p>Дизайн</p>
+            <h2 class="examples-title">Постер New Orlean vs Golden Star</h2>
+            <p class="examples-text">Дизайн</p>
           </li>
           <li class="exampl-el">
             <img src="./img/portfolio/seafood.jpg" alt="рыба" width="370" />
-            <h2>Ресторан Seafood</h2>
-            <p>Приложение</p>
+            <h2 class="examples-title">Ресторан Seafood</h2>
+            <p class="examples-text">Приложение</p>
           </li>
           <li class="exampl-el">
             <img src="./img/portfolio/prime.jpg" alt="Наушники" width="370" />
             <h2>Проект Prime</h2>
-            <p>Маркетинг</p>
+            <p class="examples-text">Маркетинг</p>
           </li>
           <li class="exampl-el">
             <img src="./img/portfolio/boxes.jpg" alt="коробки" width="370" />
-            <h2>Проект Boxes</h2>
-            <p>Приложение</p>
+            <h2 class="examples-title">Проект Boxes</h2>
+            <p class="examples-text">Приложение</p>
           </li>
           <li class="exampl-el">
             <img
@@ -85,8 +96,8 @@
               alt="монитор"
               width="370"
             />
-            <h2>Inspiration has no Borders</h2>
-            <p>Веб-сайт</p>
+            <h2 class="examples-title">Inspiration has no Borders</h2>
+            <p class="examples-text">Веб-сайт</p>
           </li>
           <li class="exampl-el">
             <img
@@ -94,13 +105,13 @@
               alt="книга"
               width="370"
             />
-            <h2>Издание Limited Edition</h2>
-            <p>Дизайн</p>
+            <h2 class="examples-title">Издание Limited Edition</h2>
+            <p class="examples-text">Дизайн</p>
           </li>
           <li class="exampl-el">
             <img src="./img/portfolio/lab.jpg" alt="бирка" width="370" />
-            <h2>Проект LAB</h2>
-            <p>Маркетинг</p>
+            <h2 class="examples-title">Проект LAB</h2>
+            <p class="examples-text">Маркетинг</p>
           </li>
           <li class="exampl-el">
             <img
@@ -108,23 +119,27 @@
               alt="работа за ноутбком"
               width="370"
             />
-            <h2>Growing Business</h2>
-            <p>Приложение</p>
+            <h2 class="examples-title">Growing Business</h2>
+            <p class="examples-text">Приложение</p>
           </li>
         </ul>
       </section>
     </main>
     <!-- FOOTER-->
     <footer class="footer">
-      <a class="logo link" href="./index.html"><span>Web</span>Studio</a>
+      <a class="footer-logo link" href="./index.html"><span>Web</span>Studio</a>
       <address class="address">
         <span> г. Киев, пр-т Леси Украинки, 26</span>
         <ul class="list">
           <li>
-            <a class="link" href="mailto:info@example.com">info@example.com</a>
+            <a class="address-link" href="mailto:info@example.com"
+              >info@example.com</a
+            >
           </li>
           <li>
-            <a class="link" href="tel:+380991111111">+38 099 111 11 11</a>
+            <a class="address-link" href="tel:+380991111111"
+              >+38 099 111 11 11</a
+            >
           </li>
         </ul>
       </address>
