--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
               alt="Фото Николая"
               width="270"
             />
-            <h3>Николай Тарасов</h3>
+            <h3 class="team-title">Николай Тарасов</h3>
             <p class="team-text">Marketing</p>
           </li>
           <li>
