--- a/portfolio.html
+++ b/portfolio.html
@@ -82,7 +82,7 @@
           </li>
           <li class="exampl-el">
             <img src="./img/portfolio/prime.jpg" alt="Наушники" width="370" />
-            <h2>Проект Prime</h2>
+            <h2 class="examples-title">Проект Prime</h2>
             <p class="examples-text">Маркетинг</p>
           </li>
           <li class="exampl-el">
