доавялет ссылки в список примеров работ

--- a/portfolio.html
+++ b/portfolio.html
@@ -58,69 +58,87 @@
         </ul>
         <ul class="examples list">
           <li class="exampl-el">
-            <img
-              src="./img/portfolio/tehnocrack.jpg"
-              alt="ноутбук"
-              width="370"
-            />
-            <h2 class="examples-title">Технокряк</h2>
-            <p class="examples-text">Веб-сайт</p>
+            <a class="exampl-link" href="#">
+              <img
+                src="./img/portfolio/tehnocrack.jpg"
+                alt="ноутбук"
+                width="370"
+              />
+              <h2 class="examples-title">Технокряк</h2>
+              <p class="examples-text">Веб-сайт</p>
+            </a>
           </li>
           <li class="exampl-el">
-            <img
-              src="./img/portfolio/poster.jpg"
-              alt="постер с баскетболистами"
-              width="370"
-            />
-            <h2 class="examples-title">Постер New Orlean vs Golden Star</h2>
-            <p class="examples-text">Дизайн</p>
+            <a class="exampl-link" href=""
+              ><img
+                src="./img/portfolio/poster.jpg"
+                alt="постер с баскетболистами"
+                width="370"
+              />
+              <h2 class="examples-title">Постер New Orlean vs Golden Star</h2>
+              <p class="examples-text">Дизайн</p>
+            </a>
           </li>
           <li class="exampl-el">
-            <img src="./img/portfolio/seafood.jpg" alt="рыба" width="370" />
-            <h2 class="examples-title">Ресторан Seafood</h2>
-            <p class="examples-text">Приложение</p>
+            <a href="#" class="example-link">
+              <img src="./img/portfolio/seafood.jpg" alt="рыба" width="370" />
+              <h2 class="examples-title">Ресторан Seafood</h2>
+              <p class="examples-text">Приложение</p>
+            </a>
           </li>
           <li class="exampl-el">
-            <img src="./img/portfolio/prime.jpg" alt="Наушники" width="370" />
-            <h2 class="examples-title">Проект Prime</h2>
-            <p class="examples-text">Маркетинг</p>
+            <a class="example-link" href="#">
+              <img src="./img/portfolio/prime.jpg" alt="Наушники" width="370" />
+              <h2 class="examples-title">Проект Prime</h2>
+              <p class="examples-text">Маркетинг</p>
+            </a>
           </li>
           <li class="exampl-el">
-            <img src="./img/portfolio/boxes.jpg" alt="коробки" width="370" />
-            <h2 class="examples-title">Проект Boxes</h2>
-            <p class="examples-text">Приложение</p>
+            <a class="example-link" href="#"
+              ><img src="./img/portfolio/boxes.jpg" alt="коробки" width="370" />
+              <h2 class="examples-title">Проект Boxes</h2>
+              <p class="examples-text">Приложение</p>
+            </a>
           </li>
           <li class="exampl-el">
-            <img
-              src="./img/portfolio/inspiration.jpg"
-              alt="монитор"
-              width="370"
-            />
-            <h2 class="examples-title">Inspiration has no Borders</h2>
-            <p class="examples-text">Веб-сайт</p>
+            <a class="example-link" href="#">
+              <img
+                src="./img/portfolio/inspiration.jpg"
+                alt="монитор"
+                width="370"
+              />
+              <h2 class="examples-title">Inspiration has no Borders</h2>
+              <p class="examples-text">Веб-сайт</p>
+            </a>
           </li>
           <li class="exampl-el">
-            <img
-              src="./img/portfolio/limited-edition.jpg"
-              alt="книга"
-              width="370"
-            />
-            <h2 class="examples-title">Издание Limited Edition</h2>
-            <p class="examples-text">Дизайн</p>
+            <a class="example-link" href="#">
+              <img
+                src="./img/portfolio/limited-edition.jpg"
+                alt="книга"
+                width="370"
+              />
+              <h2 class="examples-title">Издание Limited Edition</h2>
+              <p class="examples-text">Дизайн</p>
+            </a>
           </li>
           <li class="exampl-el">
-            <img src="./img/portfolio/lab.jpg" alt="бирка" width="370" />
-            <h2 class="examples-title">Проект LAB</h2>
-            <p class="examples-text">Маркетинг</p>
+            <a class="example-link" href="#"
+              ><img src="./img/portfolio/lab.jpg" alt="бирка" width="370" />
+              <h2 class="examples-title">Проект LAB</h2>
+              <p class="examples-text">Маркетинг</p>
+            </a>
           </li>
           <li class="exampl-el">
-            <img
-              src="./img/portfolio/growning.jpg"
-              alt="работа за ноутбком"
-              width="370"
-            />
-            <h2 class="examples-title">Growing Business</h2>
-            <p class="examples-text">Приложение</p>
+            <a class="example-link" href="#">
+              <img
+                src="./img/portfolio/growning.jpg"
+                alt="работа за ноутбком"
+                width="370"
+              />
+              <h2 class="examples-title">Growing Business</h2>
+              <p class="examples-text">Приложение</p>
+            </a>
           </li>
         </ul>
       </section>
